@@ -6,8 +6,13 @@ import java.util.List;
 /**
  * 运行时常量池内存溢出测试
  *
- *  VM参数设置： -XXPermSize=10M -XX:MaxPermSize=10M
- * 分别在 JDK1.6、JDK1.7 和 JDK1.8 环境下运行
+ *  VM参数设置：
+ *      JDK1.6  -XX:PermSize=10M  -XX:MaxPermSize=10M
+ *      JDK1.7  -XX:PermSize=10M  -XX:MaxPermSize=10M
+ *      JDK1.7  -Xms10m -Xmx10m -XX:+HeapDumpOnOutOfMemoryError
+ *      JDK1.8  -Xms10m -Xmx10m -XX:+HeapDumpOnOutOfMemoryError
+ *      JDK1.8  -Xms100m -Xmx100m -XX:+HeapDumpOnOutOfMemoryError  -XX:MetaspaceSize=10m -XX:MaxMetaspaceSize=10m
+ *
  *
  * @author skylaker
  * @version V1.0 2020/3/30 20:56
@@ -21,6 +26,7 @@ public class RuntimeConstantPoolOOM {
         // 不过这个范围内产生的字符串数量足够超出方法区 10M 的限制
         int  i = 0;
         while (true){
+            System.out.println(i);
             list.add(String.valueOf(i++).intern());
         }
     }
